# ROB55_HW1

./: .gitignore  CMakeLists.txt  package.xml  package.xml~
launch/: wall_stare.launch
not_a_project/: CMakeLists.txt  README  package.xml
not_a_project/launch/: function_timer.launch  wallAproach.launch
not_a_project/src/: aproachWall_actionClient.cpp  filter_function.h  filter_node.cpp  front_filter.cpp  timer.cpp  wall_approach.cpp
not_a_project/srv/: filter.srv
rob599_hw1/: CMakeLists.txt  README  package.xml
rob599_hw1/action/: Approach_Wall.action
rob599_hw1/launch/: wall_stare.launch
rob599_hw1/src/: Change_StoppingDistance.py  find_wall.py  laserScan_filter.py  markers.py  set_wallApproach.py  wall_starer.py
rob599_hw1/srv/: Stopping_distance.srv
rob599_hw2/: CMakeLists.txt  README  package.xml
rob599_hw2/action/: GoToPlace.action  Patrol.action
rob599_hw2/launch/: memorize_position.launch
rob599_hw2/src/: base_link_pose.py  driver.py  memorize_position.py  robot_human_interface.py
rob599_hw2/srv/: location.srv  save_places.srv
rob599_hw3/: CMakeLists.txt  README  TimerResults.txt  package.xml
rob599_hw3/launch/: median_filter.launch  median_filter_cpp.launch  noiser.launch  noiser_cpp.launch  timer_medianFilter.launch  timer_medianFilter_cpp.launch  timer_medianFilter_noiser.launch  timer_medianFilter_noiser_cpp.launch  timer_only.launch  timer_only_cpp.launch
rob599_hw3/src/: median_filter.cpp  median_filter.py  noiser.cpp  noiser.py  py_average_time.txt  timer.cpp  timer.py
src/: Change_StoppingDistance.py  LaserScanFilter.py  laserScan_filter.py  laser_subsriber.py  wall_starer.py
