<?xml version="1.0"?>
<package format="2">
  <name>rob599_hw1</name>
  <version>0.1.0</version>
  <description>
    Homeowrk 1, ROB599, OSU, October 27, 2020
  </description>

  <maintainer email="anderja7@oregonstate.edu">Jake Anderson</maintainer>

  <license>BSD</license>

  <author email="anderja7@oregonstate.edu">Jake Anderson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
